[WEB-396] Drop page overlapping fix

--- a/src/Assets/style.scss
+++ b/src/Assets/style.scss
@@ -1417,7 +1417,7 @@ a{
     }
   }
   &.h-vh{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     background-position: center;
